--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -20,7 +20,7 @@ texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 custom_template/release=""
 custom_template/debug=""
 codesign/enable=false
@@ -32,48 +32,15 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PoolStringArray(  )
 application/icon=""
-application/file_version=""
-application/product_version=""
-application/company_name=""
+application/file_version="0.1"
+application/product_version="1.4.5"
+application/company_name="Broken Lamp-A Studio"
 application/product_name="PlatGen"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+application/file_description="PlatGen opensource game"
+application/copyright="No Copyright Product (NCP)"
+application/trademarks="Broken Lamp-A Studio™ (Unofficial)"
 
 [preset.1]
-
-name="Mac OSX"
-platform="Mac OSX"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="../PlatGenstuff/mac/PlatGen.zip"
-patch_list=PoolStringArray(  )
-script_export_mode=1
-script_encryption_key=""
-
-[preset.1.options]
-
-custom_template/debug=""
-custom_template/release=""
-application/name="PlatGen"
-application/info="PlatGen Game"
-application/icon="res://icon.png"
-application/identifier=""
-application/signature=""
-application/short_version="1.1.8"
-application/version="1.1.8"
-application/copyright=""
-display/high_res=false
-privacy/camera_usage_description=""
-privacy/microphone_usage_description=""
-texture_format/s3tc=true
-texture_format/etc=false
-texture_format/etc2=false
-
-[preset.2]
 
 name="Linux/X11"
 platform="Linux/X11"
@@ -87,7 +54,7 @@ patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
-[preset.2.options]
+[preset.1.options]
 
 texture_format/bptc=false
 texture_format/s3tc=true
@@ -96,103 +63,5 @@ texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 binary_format/embed_pck=false
-custom_template/release=""
-custom_template/debug=""
-
-[preset.3]
-
-name="iOS"
-platform="iOS"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="../PlatGenstuff/ios/PlatGen.ipa"
-patch_list=PoolStringArray(  )
-script_export_mode=1
-script_encryption_key=""
-
-[preset.3.options]
-
-custom_template/debug=""
-custom_template/release=""
-application/app_store_team_id="394576584766900"
-application/provisioning_profile_uuid_debug=""
-application/code_sign_identity_debug="iPhone Developer"
-application/export_method_debug=1
-application/provisioning_profile_uuid_release=""
-application/code_sign_identity_release=""
-application/export_method_release=0
-application/name=""
-application/info="PlatGen Game"
-application/identifier=""
-application/signature=""
-application/short_version="1.0"
-application/version="1.0"
-application/copyright=""
-capabilities/arkit=false
-capabilities/camera=false
-capabilities/access_wifi=false
-capabilities/game_center=true
-capabilities/in_app_purchases=false
-capabilities/push_notifications=false
-user_data/accessible_from_files_app=false
-user_data/accessible_from_itunes_sharing=false
-privacy/camera_usage_description=""
-privacy/microphone_usage_description=""
-privacy/photolibrary_usage_description=""
-orientation/portrait=true
-orientation/landscape_left=true
-orientation/landscape_right=true
-orientation/portrait_upside_down=true
-required_icons/iphone_120x120=""
-required_icons/ipad_76x76=""
-required_icons/app_store_1024x1024=""
-optional_icons/iphone_180x180=""
-optional_icons/ipad_152x152=""
-optional_icons/ipad_167x167=""
-optional_icons/spotlight_40x40=""
-optional_icons/spotlight_80x80=""
-storyboard/use_launch_screen_storyboard=false
-storyboard/image_scale_mode=0
-storyboard/custom_image@2x=""
-storyboard/custom_image@3x=""
-storyboard/use_custom_bg_color=false
-storyboard/custom_bg_color=Color( 0, 0, 0, 1 )
-landscape_launch_screens/iphone_2436x1125=""
-landscape_launch_screens/iphone_2208x1242=""
-landscape_launch_screens/ipad_1024x768=""
-landscape_launch_screens/ipad_2048x1536=""
-portrait_launch_screens/iphone_640x960=""
-portrait_launch_screens/iphone_640x1136=""
-portrait_launch_screens/iphone_750x1334=""
-portrait_launch_screens/iphone_1125x2436=""
-portrait_launch_screens/ipad_768x1024=""
-portrait_launch_screens/ipad_1536x2048=""
-portrait_launch_screens/iphone_1242x2208=""
-architectures/armv7=false
-architectures/arm64=true
-
-[preset.4]
-
-name="HTML5"
-platform="HTML5"
-runnable=true
-custom_features=""
-export_filter="all_resources"
-include_filter=""
-exclude_filter=""
-export_path="../PlatGenstuff/html/PlatGen.html"
-patch_list=PoolStringArray(  )
-script_export_mode=1
-script_encryption_key=""
-
-[preset.4.options]
-
-vram_texture_compression/for_desktop=true
-vram_texture_compression/for_mobile=false
-html/custom_html_shell=""
-html/head_include=""
 custom_template/release=""
 custom_template/debug=""
